# bytemusehq

./: .gitignore  CMakeLists.txt  Extending.md  README.md  default.nix  flake.nix  vcpkg.json
.github/workflows/: ci.yml
resources/: resources.h  resources.rc
resources/macos/: Info.plist.in
scripts/: bump-version.sh
src/: frame.cpp  main.cpp
src/ai/: ai_provider_cortex.h  ai_provider_gemini.h  ai_types.h  gemini_client.h
src/commands/: app_commands.h  builtin_commands.h  command.h  command_palette.cpp  command_palette.h  command_registry.h  edit_commands.h  file_commands.h  view_commands.h
src/config/: config.cpp  config.h  config_commands.h
src/fs/: fs.cpp  fs.h  remote_commands.h
src/github/: github_projects_client.h
src/http/: http_client.cpp  http_client.h  http_client_curl.h  http_client_winhttp.h
src/jira/: jira_client.h
src/lsp/: lsp_client.h
src/mcp/: mcp.h  mcp_code_index.h  mcp_filesystem.h  mcp_github_projects.h  mcp_jira.h  mcp_terminal.h
src/theme/: theme.cpp  theme.h  theme_commands.h
src/ui/: builtin_widgets.h  editor.cpp  editor.h  editor_widget.h  file_tree_widget.h  frame.cpp  frame.h  gemini_chat_widget.h  github_projects_widget.h  jira_widget.h  remote_folder_dialog.h  symbols_widget.h  terminal.cpp  terminal.h  terminal_commands.h  terminal_widget.h  timer_widget.h  widget.h  widget_activity_bar.cpp  widget_activity_bar.h  widget_bar.cpp  widget_bar.h
tests/: test_config.cpp  test_main.cpp
tools/: lsp_diagnostic.cpp
